# mugrad

./: .gitignore  CMakeLists.txt
include/expr/: expr.hpp
include/node/: node.hpp
include/tensor/: tensor.hpp
include/value/: value.hpp
include/var/: var.hpp
micrograd_py/: autograd.py  demo.ipynb  main.py  nn.py  playground.ipynb
source/: CMakeLists.txt  client.cpp
test/: CMakeLists.txt  test_main.cpp
test/main/: CMakeLists.txt  test_linear.cpp  test_tensor.cpp
